SIT-000 make compilable with java 7